Move CompositeHandler tests to core